cluster/timeseries-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeseries-api
  namespace: timeseries-api
  labels:
    app: timeseries-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeseries-api
  template:
    metadata:
      labels:
        app: timeseries-api
    spec:
      containers:
        - name: timeseries-api
          image: ghcr.io/needleinajaystack/go-timeseries-api@sha256:afb08ed58478ecf4fe9493a627ab002f92e95b33a543e7050e4a8ce35016e5dd
          ports:
            - containerPort: 80
            - name: metrics
              containerPort: 2112
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
