cluster/timeseries-api/service-postgres-nodeport.yaml
# Exposes PostgreSQL to the local machine. This is only used by Grafana.
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: timeseries-api
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30432
  selector:
    postgres-operator.crunchydata.com/cluster: postgres
    postgres-operator.crunchydata.com/instance-set: timeseries-api
