cluster/timeseries-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeseries-api
  namespace: timeseries-api
spec:
  selector:
    app: timeseries-api
  ports:
  - port: 80
    targetPort: 80
